tests/ui/range/range_traits-1.stderr
error[E0277]: the trait bound `std::ops::Range<usize>: Ord` is not satisfied
  --> $DIR/range_traits-1.rs:5:5
   |
LL | #[derive(Clone, PartialEq, Eq, PartialOrd, Ord, Hash, Debug)]
   |                                            --- in this derive macro expansion
LL | struct AllTheRanges {
LL |     a: Range<usize>,
   |     ^^^^^^^^^^^^^^^ the trait `Ord` is not implemented for `std::ops::Range<usize>`

error[E0277]: the trait bound `std::ops::RangeTo<usize>: Ord` is not satisfied
  --> $DIR/range_traits-1.rs:7:5
   |
LL | #[derive(Clone, PartialEq, Eq, PartialOrd, Ord, Hash, Debug)]
   |                                            --- in this derive macro expansion
...
LL |     b: RangeTo<usize>,
   |     ^^^^^^^^^^^^^^^^^ the trait `Ord` is not implemented for `std::ops::RangeTo<usize>`

error[E0277]: the trait bound `std::ops::RangeFrom<usize>: Ord` is not satisfied
  --> $DIR/range_traits-1.rs:9:5
   |
LL | #[derive(Clone, PartialEq, Eq, PartialOrd, Ord, Hash, Debug)]
   |                                            --- in this derive macro expansion
...
LL |     c: RangeFrom<usize>,
   |     ^^^^^^^^^^^^^^^^^^^ the trait `Ord` is not implemented for `std::ops::RangeFrom<usize>`

error[E0277]: the trait bound `std::ops::RangeFull: Ord` is not satisfied
  --> $DIR/range_traits-1.rs:11:5
   |
LL | #[derive(Clone, PartialEq, Eq, PartialOrd, Ord, Hash, Debug)]
   |                                            --- in this derive macro expansion
...
LL |     d: RangeFull,
   |     ^^^^^^^^^^^^ the trait `Ord` is not implemented for `std::ops::RangeFull`

error[E0277]: the trait bound `std::ops::RangeInclusive<usize>: Ord` is not satisfied
  --> $DIR/range_traits-1.rs:13:5
   |
LL | #[derive(Clone, PartialEq, Eq, PartialOrd, Ord, Hash, Debug)]
   |                                            --- in this derive macro expansion
...
LL |     e: RangeInclusive<usize>,
   |     ^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Ord` is not implemented for `std::ops::RangeInclusive<usize>`

error[E0277]: the trait bound `std::ops::RangeToInclusive<usize>: Ord` is not satisfied
  --> $DIR/range_traits-1.rs:15:5
   |
LL | #[derive(Clone, PartialEq, Eq, PartialOrd, Ord, Hash, Debug)]
   |                                            --- in this derive macro expansion
...
LL |     f: RangeToInclusive<usize>,
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Ord` is not implemented for `std::ops::RangeToInclusive<usize>`

error: aborting due to 6 previous errors

For more information about this error, try `rustc --explain E0277`.
